--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 .record{
   background-color: grey;
-  grid-template-columns: 100px;
-  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 3fr 1fr;
   text-align: center;
   padding: 10px;
   gap: 20px;
@@ -17,7 +17,6 @@
 
 .title{
   background-color: #89cff0;
-  grid-template-columns: 80vw;
   margin: 10px;
 }
 .details{
