--- a/style.css
+++ b/style.css
@@ -6,20 +6,15 @@
   grid-template-rows: auto;
 }
 
-.record{
+form{
   background-color: grey;
-  grid-template-columns: 1fr;
+  grid-column: 1/2;
   grid-template-rows: 1fr 3fr 1fr;
   text-align: center;
   padding: 10px;
-  
 }
 
-.title{
-  background-color: #89cff0;
-  margin: 10px;
-}
-.details{
+input{
   background-color: #89cff0;
   margin: 10px;
 }
