--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   grid-template-rows: auto;
 }
 
-form{
+.create{
   background-color: grey;
   grid-column: 1/2;
   grid-template-rows: 1fr 3fr 1fr;
@@ -14,12 +14,13 @@ form{
   padding: 10px;
 }
 
-input{
+input, textarea{
   background-color: #89cff0;
   margin: 10px;
 }
 
 .date{
-  background-color: #89cff0;
+  border-radius: 10% 10%;
+  background-color: #53778F;
   margin: 10px;
 }
